@@ -1,0 +1,78 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- ***** BEGIN LICENSE BLOCK *****
+  -   Version: MPL 1.1/GPL 2.0/LGPL 2.1
+  -
+  - The contents of this file are subject to the Mozilla Public License Version
+  - 1.1 (the "License"); you may not use this file except in compliance with
+  - the License. You may obtain a copy of the License at
+  - http://www.mozilla.org/MPL/
+  -
+  - Software distributed under the License is distributed on an "AS IS" basis,
+  - WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
+  - for the specific language governing rights and limitations under the
+  - License.
+  -
+  - The Original Code is FireGPG.
+  -
+  - The Initial Developer of the Original Code is
+  - FireGPG Team.
+  - Portions created by the Initial Developer are Copyright (C) 2007
+  - the Initial Developer. All Rights Reserved.
+  -
+  - Contributor(s):
+  -
+  - Alternatively, the contents of this file may be used under the terms of
+  - either the GNU General Public License Version 2 or later (the "GPL"), or
+  - the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
+  - in which case the provisions of the GPL or the LGPL are applicable instead
+  - of those above. If you wish to allow use of your version of this file only
+  - under the terms of either the GPL or the LGPL, and not to allow others to
+  - use your version of this file under the terms of the MPL, indicate your
+  - decision by deleting the provisions above and replace them with the notice
+  - and other provisions required by the GPL or the LGPL. If you do not delete
+  - the provisions above, a recipient may use your version of this file under
+  - the terms of any one of the MPL, the GPL or the LGPL.
+  -
+  - ***** END LICENSE BLOCK ***** -->
+
+<?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
+<?xml-stylesheet href="chrome://firegpg/skin/assistant.css" type="text/css"?>
+<!DOCTYPE dialog SYSTEM "chrome://firegpg/locale/1-welcome.dtd">
+<dialog title="FireGPG Assistant - Welcome" orient="vertical"
+        onload="onLoad()" buttons="extra1,extra2" buttonlabelextra1="Skip" buttonlabelextra2="Next" buttondir ="rtl"
+        ondialogextra1="this.close();" ondialogextra2="next();"
+        xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
+        xmlns:html="http://www.w3.org/1999/xhtml"
+        width="800px"
+        height="550px">
+
+  <stringbundleset id="stringbundleset">
+    <stringbundle id="firegpg-strings" src="chrome://firegpg/locale/firegpg.properties"/>
+  </stringbundleset>
+  <script src="1-welcome.js"/>
+
+    <label class="title" value="FireGPG Assistant" />
+
+    <description>
+        Welcome ! <html:br/><html:br/>
+        This assistant will help you to configure FireGPG, if you're a new user it's recommanded to follow it to get a working configuration.<html:br/><html:br/><html:br/>
+        What ever you choose to do, you will be able to use option to change any option.
+      </description>
+
+    <label value="Here is some information about icons and color used: "/>
+
+    <label class="whatnext" value="You should read this" />
+
+    <label class="good" value="This is something good" />
+    <label class="bad" value="This is a problem" />
+
+    <label class="advanced" value="This is for advanced users" />
+
+    <label class="help" value="This is something with help, keep your mouse over to see it" tooltiptext="Hello, I'm the help"/>
+
+
+
+</dialog>
+
+<!-- vim:ai:et:sw=2:ts=2:sts=2:tw=0:fenc=utf-8
+ -->
